Update 카카오 로또최고순위 최저순위.md

--- a/프로그래머스/레벨1/카카오 로또최고순위 최저순위.md
+++ b/프로그래머스/레벨1/카카오 로또최고순위 최저순위.md
@@ -15,9 +15,7 @@
 
 ### 입출력 예
 
-![Untitled](%E1%84%8F%E1%85%A1%E1%84%8F%E1%85%A1%E1%84%8B%E1%85%A9%20-%20%E1%84%85%E1%85%A9%E1%84%84%E1%85%A9%20%E1%84%8E%E1%85%AC%E1%84%80%E1%85%A9%20%E1%84%89%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%E1%84%8B%E1%85%AA%20%E1%84%8E%E1%85%AC%E1%84%8C%E1%85%A5%20%E1%84%89%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%B1%20f69520279eae42eea9224c0a0190a442/Untitled.png)
-
----
+![Untitled](https://user-images.githubusercontent.com/72185011/174445897-407d4109-5b82-4a9b-b2ac-fa7060622457.png)
 
 ### 생각
 
