Update 카카오 신규아이디 추천.md

--- a/프로그래머스/레벨1/카카오 신규아이디 추천.md
+++ b/프로그래머스/레벨1/카카오 신규아이디 추천.md
@@ -37,11 +37,10 @@ new_id에 나타날 수 있는 특수문자는
 
 ### 생각
 
-문자열을 다루는 문제라서 첫번째는 자바의 lowerCase로 대문자를 소문자로 바꿔줄꺼같고 두번째는 분기문으로 subString을 하려니 조건이 5개나 되서 다른 방법을 찾아봐야할거같다. 
-
-마침표 ,, 가 2연속일 경우는 하나로 바꾸는데 중복제거니 HashSet을 써야할지 분기문으로 처리해야할지 고민이다. 
-
-문자열의 index가 첫 혹은 끝자리 마침표면 제거할수있을거같고 빈문자열이면 a 넣고 마지막 7단계가 감이 오지않음.
+문자열을 다루는 문제라서 첫번째는 자바의 lowerCase로 대문자를 소문자로 바꿔줄꺼같고   
+두번째는 분기문으로 subString을 하려니 조건이 5개나 되서 다른 방법을 찾아봐야할거같다.   
+마침표 ,, 가 2연속일 경우는 하나로 바꾸는데 중복제거니 HashSet을 써야할지 분기문으로 처리해야할지 고민이다.   
+문자열의 index가 첫 혹은 끝자리 마침표면 제거할수있을거같고 빈문자열이면 a 넣고 마지막 7단계가 감이 오지않음.  
 
 ---
 
