Update 카카오 신규아이디 추천.md

--- a/프로그래머스/레벨1/카카오 신규아이디 추천.md
+++ b/프로그래머스/레벨1/카카오 신규아이디 추천.md
@@ -46,7 +46,9 @@ new_id에 나타날 수 있는 특수문자는
 
 ### 풀이
 
-다른 풀이는 정규식을 이용해서 10줄만에 문제를 풀어냈지만 정규식을 익혀서 문제풀이에 적용하려는 시간이 더 비효율적인거같아서 그 풀이는 참고하지않았다. IDE 없이는 lowerCase조차 오류가 났다. 
+다른 풀이는 정규식을 이용해서 10줄만에 문제를 풀어냈지만 정규식을 익혀서 문제풀이에 적용하려는 시간이 더 비효율적인거같아서   
+그 풀이는 참고하지않았다. IDE 없이는 lowerCase조차 오류가 났다. lowerCase가 아니라 toLowerCase였고 그 외 문자열 메소드 기능
+들이 너무 미숙했다. 구글링과 메소드 사용법 예제 없이는 바로 막혔다.  
 
 My Solution
 
