--- a/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
+++ b/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
@@ -9,15 +9,16 @@
 - 234567 → "23four5six7"
 - 10203 → "1zerotwozero3"
 
-이렇게 숫자의 일부 자릿수가 영단어로 바뀌어졌거나, 혹은 바뀌지 않고 그대로인 문자열 `s`가 매개변수로 주어집니다. `s`가 의미하는 원래 숫자를 return 하도록 solution 함수를 완성해주세요.
+이렇게 숫자의 일부 자릿수가 영단어로 바뀌어졌거나, 혹은 바뀌지 않고 그대로인 문자열 `s`가 매개변수로 주어집니다.   
+`s`가 의미하는 원래 숫자를 return 하도록 solution 함수를 완성해주세요.
 
 ![Untitled](https://user-images.githubusercontent.com/72185011/177169347-cf8bc68a-18ff-4c30-975b-47da4ad262f6.png)
 
 ### 제한 사항
 
-- 1 ≤ `s`의 길이 ≤ 50
-- `s`가 "zero" 또는 "0"으로 시작하는 경우는 주어지지 않습니다.
-- return 값이 1 이상 2,000,000,000 이하의 정수가 되는 올바른 입력만 `s`로 주어집니다.
+- 1 ≤ `s`의 길이 ≤ 50  
+- `s`가 "zero" 또는 "0"으로 시작하는 경우는 주어지지 않습니다.  
+- return 값이 1 이상 2,000,000,000 이하의 정수가 되는 올바른 입력만 `s`로 주어집니다.  
 
 ---
 
