Update 카카오 숫자 문자열과 영단어.md

--- a/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
+++ b/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
@@ -30,7 +30,10 @@
 
 ### 생각
 
-세상 무식한 방법으로 enum을 만들어서 표현하는 방법이 먼저 떠올랐다. 표현하는건 둘째치고 글자를 잘라서 어디서 어디까지는 무슨 숫자와 연관되는 단어인지 알아내야 할 거 같다. 숫자 이전까지 글자를 긁어다가 최소 단어가 3글자니까 3글자씩 끊어보고 매칭이 안되면 4글자 5글자까지 시도해서 String을 붙이려는 생각이 들었다.
+세상 무식한 방법으로 enum을 만들어서 표현하는 방법이 먼저 떠올랐다.   
+표현하는건 둘째치고 글자를 잘라서 어디서 어디까지는 무슨 숫자와 연관되는 단어인지 알아내야 할 거 같다.   
+숫자 이전까지 글자를 긁어다가 최소 단어가 3글자니까 3글자씩 끊어보고   
+매칭이 안되면 4글자 5글자까지 시도해서 String을 붙이려는 생각이 들었다.    
 
 나는 보바다.
 
@@ -38,7 +41,8 @@
 
 ### 풀이
 
-저렇게 하나씩 반복문으로 글자를 짤라서 비교하는 접근이 아니였다. 다른 사람들은 String의  `replace`이라는 메소드를 사용했다. 
+저렇게 하나씩 반복문으로 글자를 짤라서 비교하는 접근이 아니였다.   
+다른 사람들은 String의  `replace`이라는 메소드를 사용했다.   
 
 ```java
 String a = "무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 ";	
