숫자 문자열과 영단어

--- a/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
+++ b/프로그래머스/레벨1/카카오 숫자 문자열과 영단어.md
@@ -71,4 +71,6 @@ class Solution {
 
 ### 결론
 
-속에서 화가 치밀어 솟는다. replace 문자열 메소드를 사용할줄 모르면 글자 하나씩 반복문에 돌다가 시간초과가 나거나 코드가 엄청 복잡해질수있다. replace를 사용할경우 저 스트링 배열에 있는 단어만 일치하면 for문의 i에 해당하는 숫자를 Integer.toString(i)로 숫자로 바꿔준다. 당연히 리턴값은 Int 타입이기에 String으로 받은 매개변수를 Integer.parseInt(s)로 바꿔준다.
+속에서 화가 치밀어 솟는다. replace 문자열 메소드를 사용할줄 모르면 글자 하나씩 반복문에 돌다가 시간초과가 나거나 코드가 엄청 복잡해질수있다.   
+replace를 사용할경우 저 스트링 배열에 있는 단어만 일치하면 for문의 i에 해당하는 숫자를 Integer.toString(i)로 숫자로 바꿔준다.   
+당연히 리턴값은 Int 타입이기에 String으로 받은 매개변수를 Integer.parseInt(s)로 바꿔준다.  
