신규아이디 추천

--- a/프로그래머스/레벨1/카카오 신규아이디 추천.md
+++ b/프로그래머스/레벨1/카카오 신규아이디 추천.md
@@ -132,4 +132,5 @@ subString의 첫자리 끝자리를 자르는 방법을 아는가?
 
 IDE 없이 이 메소드들을 다 적용할수있는지에 대한 문제였다.   
 사실 더 짧은 정규식으로 풀어낸 풀이를 보더라도 String에 replaceAll이나 subString 사용방법을 모른다면 문제를 풀 수 없다.   
-앞으로 문자열 문제가 나올때마다 Char타입과 String 메소드 사용이 많아질거같은데 이번 기회에 IDE 없이 오타안나고 사용 방법을 알아두어야 할거같다.  
+앞으로 문자열 문제가 나올때마다 Char타입과 String 메소드 사용이 많아질거같은데   
+이번 기회에 IDE 없이 오타안나고 사용 방법을 알아두어야 할거같다.    
