로또 최고 순위와 최저 순위

--- a/프로그래머스/레벨1/카카오 로또최고순위 최저순위.md
+++ b/프로그래머스/레벨1/카카오 로또최고순위 최저순위.md
@@ -165,5 +165,6 @@ public class Kakao_lotto {
 
 ### 결론
 
-가장 많은 추천수를 받은건 짧은 코드로 문제를 해결한 람다식이였지만 내 눈에는 가독성이 좋아보이지 않았다.  
-Case로 정리한 풀이가 읽기 편했고 속도를 생각해서 HashMap으로 풀이를 한것도 좋아보였다. 이번 문제는 크게 어렵지 않았다.  
+가장 많은 추천수를 받은건 짧은 코드로 문제를 해결한 람다식이였지만 내 눈에는 가독성이 좋아보이지 않았다.    
+Case로 정리한 풀이가 읽기 편했고 속도를 생각해서 HashMap으로 풀이를 한것도 좋아보였다.   
+이번 문제는 크게 어렵지 않았다.    
