--- a/프로그래머스/레벨1/카카오 크레인 인형뽑기 게임.md
+++ b/프로그래머스/레벨1/카카오 크레인 인형뽑기 게임.md
@@ -2,7 +2,9 @@
 
 ### **문제설명**
 
-게임 화면의 격자의 상태가 담긴 2차원 배열 board와 인형을 집기 위해 크레인을 작동시킨 위치가 담긴 배열 moves가 매개변수로 주어질 때, 크레인을 모두 작동시킨 후 터트려져 사라진 인형의 개수를 return 하도록 solution 함수를 완성해주세요.
+게임 화면의 격자의 상태가 담긴 2차원 배열 board와 인형을 집기 위해   
+크레인을 작동시킨 위치가 담긴 배열 moves가 매개변수로 주어질 때,   
+크레인을 모두 작동시킨 후 터트려져 사라진 인형의 개수를 return 하도록 solution 함수를 완성해주세요.  
 
 ### 제한 사항
 
@@ -23,9 +25,9 @@
 
 ### 생각
 
-뭔가 넣고 빼는 문제라 회사에서 스택을 써야할거같았지만 한줄도 구현못하고 문제를 꺼버렸다. 배열 문제만 나오면 머리가 아프고 보기싫어진다. 이차원 배열이니 더 보기 싫어진다. 
-
-어떻게 풀어야할까
+뭔가 넣고 빼는 문제라 회사에서 스택을 써야할거같았지만 한줄도 구현못하고 문제를 꺼버렸다.   
+배열 문제만 나오면 머리가 아프고 보기싫어진다. 이차원 배열이니 더 보기 싫어진다.   
+어떻게 풀어야할까  
 
 ---
 
