--- a/이동은/프로그래머스/레벨1/로또 최고순위와 최저순위.md
+++ b/이동은/프로그래머스/레벨1/로또 최고순위와 최저순위.md
@@ -1,14 +1,13 @@
+
 # 로또의 최고 순위와 최저 순위
 
 ## 문제 설명
-
----
-
 로또 6자리 중 0으로 표기한 지워진 번호를 포함하여 최고순위와 최저순위를 구하라.
 
 ( 1개 맞으면 6등 →→ 6개 다 맞으면 1등)
 
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/214c03ef-035c-4732-9f08-3c8815b39f76/Untitled.png)
+![image](https://user-images.githubusercontent.com/74232355/181920158-a9cf9825-8020-46b5-8512-496ec21a3141.png)
+
 
 ### 제한사항
 
@@ -23,8 +22,6 @@
     - win_nums의 원소들은 정렬되어 있지 않을 수도 있습니다.
 
 ## 풀이
-
----
 
 ### My solution
 
@@ -77,8 +74,6 @@ class Solution {
 
 ## 다른 풀이
 
----
-
 ### Solution1.
 
 ```java
@@ -92,8 +87,6 @@ class Solution {
 ```
 
 ## 느낀점
-
----
 
 - 생각의 흐름대로 풀었던 문제
 - 간단한 for문 만으로도 해결 가능한 문제였지만 어떤 자료구조를 활용할 것인가 다시 복기해볼 것
