카카오 실패율

--- a/정재윤/프로그래머스/레벨1/카카오 실패율.md
+++ b/정재윤/프로그래머스/레벨1/카카오 실패율.md
@@ -5,9 +5,9 @@
 - 카카오 - 실패율
     - [URL](https://school.programmers.co.kr/learn/courses/30/lessons/42889)
 
-### **문제 이해하**
+### **문제 이해하기**
+![Untitled](https://user-images.githubusercontent.com/72185011/184906358-741625f7-c011-41d6-a1e2-d16ddcd6f0c5.png)
 
-![Untitled](%E1%84%8F%E1%85%A1%E1%84%8F%E1%85%A1%E1%84%8B%E1%85%A9%20-%20%E1%84%89%E1%85%B5%E1%86%AF%E1%84%91%E1%85%A2%E1%84%8B%E1%85%B2%E1%86%AF%20e859de6d3ce34603ae41da7ef2f33fe4/Untitled.png)
 
 요즘 신규 사용자의 수가 급감한 것이다. 
 
@@ -36,8 +36,7 @@
 - 스테이지에 도달한 유저가 없는 경우 해당 스테이지의 실패율은 `0` 으로 정의한다.
 
 ### INPUT OUTPUT
-
-![Untitled](%E1%84%8F%E1%85%A1%E1%84%8F%E1%85%A1%E1%84%8B%E1%85%A9%20-%20%E1%84%89%E1%85%B5%E1%86%AF%E1%84%91%E1%85%A2%E1%84%8B%E1%85%B2%E1%86%AF%20e859de6d3ce34603ae41da7ef2f33fe4/Untitled%201.png)
+![Untitled 1](https://user-images.githubusercontent.com/72185011/184906419-5adc4388-e66c-42c1-a287-17c21e8f3919.png)
 
 ### INPUT OUTPUT EXAMPLE
 
